# WSB

./: README.md  pyproject.toml
blog/: db.sqlite3
blog/blog/: settings.py  urls.py
blog/users/: views.py
blog/users/templates/users/: login.html  register.html
blog/zal/: apps.py  models.py  urls.py  views.py
blog/zal/migrations/: 0001_initial.py  0002_comment.py
blog/zal/templates/zal/: add_comment_to_post.html  base.html  post_detail.html  post_edit.html  post_list.html
