[tool.poetry]
name = "wsb"
version = "0.1.0"
description = ""
authors = ["BeaKad <bozalek.beata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
django = "^4.2.2"
css = "^0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
